fixed buttons being too widened out, and removed the highlight after pressing the button.

--- a/client/src/pages/style/room.css
+++ b/client/src/pages/style/room.css
@@ -129,7 +129,7 @@ div.switcher {
   width: 100%; 
   background-color: rgb(40, 40, 40);
   position: absolute;
-  top:85%;
+  top:86%;
   right:0;
   bottom:auto;
   left:0;
